--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
     </section>
     <main class="main">
-        <section class="about">
+        <section class="section about">
             <div class="about-title">
                 <h2 class="title">About</h2>
                 <p class="text">I am a freelance web developer who builds elegant, fast, and scalable web applications.</p>
@@ -90,53 +90,54 @@
                 </div>
             </div>
         </section>
-        <hr>
-        <section class="projects">
+        <section class="section projects">
             <div class="projects-title">
                 <h2 class="title">Projects</h2>
                 <p class="text">View some of my latest projects</p>
             </div>
-            <div class="projects">
-                <div class="project">
+            <div class="projects-list">
+                <div class="proj">
                     <img class="project-image" src="./images/project1.png" alt="project 1">
-                    <h4 class="project-title">Cryptocurrency Dashboard</h4>
-                    <ul class="skills">
-                        <li>Django</li>
-                        <li>React</li>
-                        <li>Material UI</li>
-                    </ul>
-                    <p class="project-text">A cryptocurrency dashboard app built using React 17, Material UI 5 and Chart.js 3.</p>
-                    <hr>
-                    
+                    <div class="proj-content">
+                        <h4 class="proj-title">Cryptocurrency Dashboard</h4>
+                        <ul class="skills">
+                            <li>Django</li>
+                            <li>React</li>
+                            <li>Material UI</li>
+                        </ul>
+                        <p class="proj-text">A cryptocurrency dashboard app built using React 17, Material UI 5 and Chart.js 3.</p>
+                    </div>
                     <a class="source-btn" href="https://github.com/Arts-HCS/Entrega2-git.git"><span class="material-icons-outlined">
                         code
                     </span>SOURCE CODE</a>
                 </div>
-                <div class="project">
+                <div class="proj">
                     <img class="project-image" src="./images/project2.png" alt="project 2">
-                    <h4 class="project-title">Portfolio Website</h4>
-                    <ul class="skills">
-                        <li>Django</li>
-                        <li>React</li>
-                        <li>Material UI</li>
-                    </ul>
-                    <p class="project-text">A portfolio website built using Django 3, Next.js 12 and Material UI 5 that uses a PostgreSQL database to store data.</p>
-                    <hr>
+                    <div class="proj-content">
+                        <h4 class="proj-title">Portfolio Website</h4>
+                        <ul class="skills">
+                            <li>Django</li>
+                            <li>React</li>
+                            <li>Material UI</li>
+                        </ul>
+                        <p class="proj-text">A portfolio website built using Django 3, Next.js 12 and Material UI 5 that uses a PostgreSQL database to store data.</p>
+                    </div>
                     <a class="source-btn" href="https://github.com/Arts-HCS/Diario-pagina-web.git"><span class="material-icons-outlined">
                         code
                     </span>SOURCE CODE</a>
                 </div>
-                <div class="project">
+                <div class="proj">
                     <img class="project-image" src="./images/project3.png" alt="project 3">
-                    <h4 class="project-title">Image Clasification</h4>
-                    <ul class="skills">
-                        <li>Django</li>
-                        <li>React</li>
-                        <li>Material UI</li>
-                    </ul>
-                    <p class="project-text">An image classification app built using TensorFlow 2, Django 3, React 17 and Material UI 5.</p>
-                    <hr>
-                    <a class="source-btn" href="/"><span class="material-icons-outlined">
+                    <div class="proj-content">
+                        <h4 class="proj-title">Image Clasification</h4>
+                        <ul class="skills">
+                            <li>Django</li>
+                            <li>React</li>
+                            <li>Material UI</li>
+                        </ul>
+                        <p class="proj-text">An image classification app built using TensorFlow 2, Django 3, React 17 and Material UI 5.</p>
+                    </div>
+                    <a class="source-btn" href="https://github.com/Arts-HCS/MyPortfolio.git"><span class="material-icons-outlined">
                         code
                     </span>SOURCE CODE</a>
                 </div>
